--- a/style.css
+++ b/style.css
@@ -2,6 +2,40 @@ html {
   scroll-behavior: smooth;
 }
 * {
-  margin: 0px;
-  padding: 0px;
+  box-sizing: border-box;
+}
+:root {
+  --color-blue: #2aaee7;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: "Verdana", sans-serif;
+  font-size: 20px;
+  line-height: 2;
+}
+header {
+  background-color: var(--color-blue);
+}
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+.nav-link {
+  text-decoration: none;
+  color: white;
+}
+.nav-link:hover {
+  color: #122a94;
 }
