--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ body {
 .nav-link:hover {
   color: var(--color-hover);
 }
+.main-contener {
+  display: flex;
+  flex-wrap: wrap;
+}
 .section-content {
   width: 50%;
   padding: 30px;
@@ -51,6 +55,7 @@ body {
   height: 200px;
   border-radius: 50%;
   object-fit: cover;
+  box-shadow: 0 0 0 4px rgb(42 174 231 / 30%);
 }
 .main-title {
   color: var(--color-blue);
@@ -68,6 +73,11 @@ body {
   color: var(--color-blue);
   font-size: 24px;
 }
+pre {
+  margin: 0;
+  padding: 0;
+}
+
 .list-project {
   list-style: none;
 }
@@ -75,17 +85,70 @@ body {
   text-decoration: none;
   color: grey;
 }
+.project-item {
+  margin-bottom: 10px;
+}
 .project-img {
-  width: 100%;
-  height: max-content;
+  width: 336px;
+  height: auto;
   object-fit: contain;
-  box-shadow: 0 0 0 4px rgb(0 0 0 / 10%);
+  box-shadow: 0 0 0 4px rgb(42 174 231 / 10%);
 }
 .project-img:hover {
-  box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 7px 7px rgba(42, 174, 231, 0.3);
 }
 .project-title {
   font-size: 20px;
+  font-weight: 200;
+  line-height: 1.5;
   margin: 0;
-  padding: 0 10px;
+  padding: 0 10px 20px 10px;
+}
+.section-content-big {
+  width: 100%;
+  padding: 30px;
+}
+.code-exampl {
+  width: 70%;
+  background-color: rgb(206, 203, 203, 0.5);
+  border-radius: 5%;
+  padding: 20px;
+  margin: 0 auto;
+}
+.list-project {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer-contener {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: var(--color-blue);
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+}
+.footer-link {
+  text-decoration: none;
+  transition: 0.3s;
+}
+.footer-link:hover {
+  transform: rotate(0.5turn);
+}
+.footer-git {
+  width: 100px;
+  height: 83px;
+  object-fit: cover;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.footer-rss {
+  height: 45px;
+  width: 121px;
+  object-fit: cover;
+  transition: 0.3s;
+  cursor: pointer;
 }
