--- a/style.css
+++ b/style.css
@@ -50,14 +50,15 @@ body {
 
 .section-content {
   width: 50%;
-  padding: 15px;
+  padding-left: 30px;
+  padding-right: 10px;
 }
 .header-avatar {
   padding-left: 30px;
 }
 .avatar {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 302px;
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 0 0 4px rgb(42 174 231 / 30%);
@@ -120,7 +121,8 @@ pre {
 }
 .section-content-big {
   width: 100%;
-  padding: 15px;
+  padding-left: 30px;
+  padding-right: 10px;
 }
 .code-exampl {
   background-color: rgb(206, 203, 203, 0.5);
