--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Verdana", sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 2;
 }
 
@@ -27,6 +27,7 @@ body {
 }
 .contener {
   max-width: 1440px;
+  padding-top: 10px;
   margin: 0 auto;
 }
 .nav-list {
@@ -44,12 +45,15 @@ body {
 .nav-link:hover {
   color: var(--color-hover);
 }
-.main-contener {
+.flex-contener {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
-.section-content {
+.column {
   width: 50%;
   padding-left: 30px;
   padding-right: 10px;
@@ -60,7 +64,7 @@ body {
 .avatar {
   width: 300px;
   height: 302px;
-  border-radius: 50%;
+  border-radius: 5px;
   object-fit: cover;
   box-shadow: 0 0 0 4px rgb(42 174 231 / 30%);
 }
@@ -79,20 +83,58 @@ body {
 }
 .section-title {
   color: var(--color-blue);
-  font-size: 2.4rem;
+  font-size: 2rem;
   margin: 10px 0px;
 }
-.list {
-  margin: 10px 0px;
-}
-pre {
-  margin: 0;
+.list,
+.education-list,
+.skills-list {
   padding: 0;
+  list-style: none;
 }
+
+.list__item{
+  padding:6px;
+}
+.list__item:before,
+.skills-list__item:before {
+  padding-right:10px;
+  font-weight: bold;
+  color: #C0C0C0;
+  content: "\2714";
+  
+}
+
+.skills-list__item {
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.skills-list__item:hover:before {
+  color: var(--color-blue);
+}
+.education-list__item {
+  position: relative;
+  border-left: 4px solid #dddddd;
+  padding: 16px 20px 16px 28px;
+  margin: 12px 0 12px 15px;
+}
+.education-list__item:before {
+  line-height: 20px;
+  position: absolute;
+  top: 10px;
+  left: -30px;
+  width: 30px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: #dddddd;
+  box-sizing: border-box;
+}
+
+
 .list-project {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+ 
   padding: 0;
   list-style: none;
 }
@@ -102,14 +144,43 @@ pre {
   color: grey;
 }
 .project-item {
+  display: flex;
+  flex-wrap: wrap; 
+ justify-content: center;
   margin-bottom: 10px;
-  margin-right: 10px;
+  
 }
-.project-img {
-  width: 488px;
-  height: 318px;
-  object-fit: contain;
+.github-link {
+  display: flex;  
+  align-items: center; 
+  justify-content:center;
+  border:  0.2rem solid var(--color-blue);
+  color: var(--color-blue);
+  text-decoration: none;
+  cursor: pointer;
+  width: 20rem;
+  padding: 5px;
+  transition: all .5s;
+ 
+}
+.github-link:hover {
+  color: #fff;
+  background-color: var(--color-blue);
+}
+.github-link__ico{
+padding-left: 5px;
+}
+.project-item__link{
+  width: 40%;
+}
+.project-img {  
+  width: 300px;
+  height: 195px;
+  object-fit: cover;  
   box-shadow: 0 0 0 4px rgb(42 174 231 / 10%);
+}
+.project-item__description{
+  width: 40%;
 }
 .project-img:hover {
   box-shadow: 0px 0px 7px 7px rgba(42, 174, 231, 0.3);
@@ -118,20 +189,13 @@ pre {
   font-size: 2rem;
   font-weight: 200;
   line-height: 1.5;
-  margin: 0;
-  padding: 0 5px 20px 5px;
+  margin: 0;   
 }
-.section-content-big {
-  width: 100%;
+.section-content {
   padding-left: 30px;
   padding-right: 10px;
 }
-.code-exampl {
-  background-color: rgb(206, 203, 203, 0.5);
-  border-radius: 5%;
-  padding: 20px;
-  margin: 0 auto;
-}
+
 
 footer {
   background-color: var(--color-blue);
@@ -146,6 +210,7 @@ footer {
   padding: 10px;
 }
 .footer-link {
+  color:#fff;
   text-decoration: none;
   transition: 0.3s;
 }
@@ -174,8 +239,8 @@ footer {
   text-decoration: none;
 }
 .topico {
-  width: 100px;
-  height: 80px;
+  width: 50px;
+  height: 40px;
 }
 @media (max-width: 768px) {
   .nav-list {
@@ -185,50 +250,42 @@ footer {
     width: 100%;
     padding: 10px;
   }
-  .section-content-big {
-    width: 100%;
-    padding: 10px;
-  }
-  .code-exampl {
-    padding: 10px;
-    margin: 0;
-    font-size: 1.4rem;
-  }
+
+
   .list-project {
     justify-content: space-around;
     align-items: center;
   }
   .topico {
-    width: 50px;
-    height: 40px;
+    width: 25px;
+    height: 20px;
   }
+  .project-item {
+    flex-direction: column;
+    gap: 10px;     
+  }
+  .column,
+  .project-item__description,
+  .project-item__link{
+    width: 100%;    
+  }
+
+ 
 }
 @media (max-width: 425px) {
-  html{
+  html {
     font-size: 7px;
-  }  
-  .code-exampl {
-    padding: 5px;
-    margin: 0;
-    font-size: 8px;
   }
+ 
 
   .header-avatar {
     padding: 0px;
     text-align: center;
   }
-  .avatar{
-    width: 100%;
-  }
+ 
   .project-item {
     margin-right: 0;
   }
-  .project-img {
-    width: 300px;
-    height: 195px;
-  }
-  .topico {
-    width: 50px;
-    height: 40px;
-  }
+ 
+
 }
